# macos-prime-remote-control

./: .gitignore  LICENSE  README.md  build.sh  index.html  launch.sh  package-lock.json  package.json  requirements.txt  tailwind.config.js  vite.config.ts
amazon/: __init__.py  cache-images.py  lg-tv-connect.py  prime-catalog.py  prime_entitlement.py  prime_profiles.py
docs/: troubleshooting-tv-connection.md
scripts/: fix-tv-connection.sh  render-icons.py
src/: App.tsx  bookmarks.ts  contextMenuBus.ts  index.css  playback.ts  tmdb.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BookmarkMenuIcons.tsx  CatalogGroup.tsx  ContextMenu.tsx  PlayDialog.tsx  SettingsDialog.tsx  TVRemote.tsx  TitleCard.tsx  TmdbLink.tsx  TvConnectionFix.tsx
