[package]
name = "prime-remote-control"
version = "0.1.0"
edition = "2021"

[lib]
name = "prime_remote_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "net", "rt-multi-thread"] }
tauri-plugin-prevent-default = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3", features = ["NSProcessInfo", "NSString"] }
